--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         <!--Gallary-->
         <div class="gallary" id="Gallary">
-            <h1>Our<span>Gallary</span></h1>
+            <h1>Our<span>Gallery</span></h1>
     
             <div class="gallary_image_box">
                 <div class="gallary_image">
